--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="logo.png" />
+    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>WEB GLEU</title>
+    <title>Procedural Galaxy</title>
+    <meta charset="utf-8">
+    <meta name="description" content="Generate your own planets!">
+    <meta property="og:title" content="Procedural Galaxy">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="logo.png">
+    <meta property="og:description" content="Generate your own planets!">
+    <meta property="og:site_name" content="Procedural Galaxy">
+    <meta property="og:locale" content="fr_FR">
+    <title></title>
 </head>
 <body>
     <div class="floating-ico"></div>
+    <span class="hello-text">Procedural Galaxy</span>
+    <p class="hello-command">Every planet is generated randomly with the textures. Click on generate !</p>
 </body>
 </html>
