:sparkles: final push

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
     <title></title>
 </head>
 <body>
-    <div class="floating-ico"></div>
     <span class="hello-text">Procedural Galaxy</span>
     <p class="hello-command">Every planet is generated randomly with the textures. Click on generate !</p>
+    <a class="link-read" href="https://github.com/majejam/webgl-hw/blob/master/README.md">See the readme.md</a>
 </body>
 </html>
