:tada: added gui interactions

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
     <title>Procedural Galaxy</title>
     <meta charset="utf-8">
     <meta name="description" content="Generate your own planets!">
-    <meta property="og:title" content="Procedural Galaxy">
+    <meta property="og:title" content="Procedural Planet">
     <meta property="og:type" content="website">
     <meta property="og:image" content="logo.png">
     <meta property="og:description" content="Generate your own planets!">
-    <meta property="og:site_name" content="Procedural Galaxy">
+    <meta property="og:site_name" content="Procedural Planet">
     <meta property="og:locale" content="fr_FR">
     <title></title>
 </head>
